[package]
name = "atom_box"
version = "0.2.0"
edition = "2018"
authors = ["John Bell <bell.john.andrew@gmail.com>"]

license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A safe idiomatic Rust implementation of Atomic Box using hazard pointers"
repository = "https://github.com/Johnabell/atom_box.git"

keywords = ["atomic", "hazard", "pointers", "AtomicBox"]
categories = ["concurrency", "rust-patterns", "memory-management"]

[features]
default = ["std"]
std = []

[build-dependencies]
rustc_version = "0.4"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.1", features = ["checkpoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(nightly)'] }
